# wqfile

./: CMakeLists.txt  CMakePresets.json  Doxyfile  LICENSE  README.md  file-config.cmake.in
cmake/: doxygen.cmake
doc/doxygen/latex/: annotated.tex  classFile_1_1Detail_1_1ReadFunction.tex  classFile_1_1Error.eps  classFile_1_1Error.tex  classFile_1_1ReadError.eps  classFile_1_1ReadError.tex  classFile_1_1Stream.tex  classFile_1_1StreamError.eps  classFile_1_1StreamError.tex  conceptFile_1_1Detail_1_1Concept_1_1Array.tex  conceptFile_1_1Detail_1_1Concept_1_1DeserialiserHasConstructor.tex  conceptFile_1_1Detail_1_1Concept_1_1DeserialiserImpl.tex  conceptFile_1_1Detail_1_1Concept_1_1HasExternalDeserialiserImpl.tex  conceptFile_1_1Detail_1_1Concept_1_1HasExternalSerialiserImpl.tex  conceptFile_1_1Detail_1_1Concept_1_1HasFunctionOperator.tex  conceptFile_1_1Detail_1_1Concept_1_1HasInternalDeserialiserImpl.tex  conceptFile_1_1Detail_1_1Concept_1_1HasInternalSerialiserImpl.tex  conceptFile_1_1Detail_1_1Concept_1_1HasTarget.tex  conceptFile_1_1Detail_1_1Concept_1_1HasUsedEndian.tex  conceptFile_1_1Detail_1_1Concept_1_1Iterable.tex  conceptFile_1_1Detail_1_1Concept_1_1SerialiserHasConstructor.tex  conceptFile_1_1Detail_1_1Concept_1_1SerialiserImpl.tex  conceptFile_1_1Detail_1_1Concept_1_1Simple.tex  conceptFile_1_1Detail_1_1Concept_1_1Span.tex  conceptFile_1_1Detail_1_1Concept_1_1String.tex  conceptFile_1_1Detail_1_1Concept_1_1Vector.tex  concepts.tex  deserialiser_8h.tex  deserialiser_8h_source.tex  dir_30e585b4d0cb3ab23653c9522967a3ec.tex  dir_d44c64559bbebec7f509842c48db8b23.tex  dir_f5187446b277730cae7aa544d2f73b81.tex  error_8h.tex  error_8h_source.tex  files.tex  hierarchy.tex  namespaceFile.tex  namespaceFile_1_1Detail.tex  namespaceFile_1_1Detail_1_1Concept.tex  namespaces.tex  (+35 more)
doc/doxygen/xml/: Doxyfile.xml  classFile_1_1Detail_1_1ReadFunction.xml  classFile_1_1Error.xml  classFile_1_1ReadError.xml  classFile_1_1Stream.xml  classFile_1_1StreamError.xml  conceptFile_1_1Detail_1_1Concept_1_1Array.xml  conceptFile_1_1Detail_1_1Concept_1_1DeserialiserHasConstructor.xml  conceptFile_1_1Detail_1_1Concept_1_1DeserialiserImpl.xml  conceptFile_1_1Detail_1_1Concept_1_1HasExternalDeserialiserImpl.xml  conceptFile_1_1Detail_1_1Concept_1_1HasExternalSerialiserImpl.xml  conceptFile_1_1Detail_1_1Concept_1_1HasFunctionOperator.xml  conceptFile_1_1Detail_1_1Concept_1_1HasInternalDeserialiserImpl.xml  conceptFile_1_1Detail_1_1Concept_1_1HasInternalSerialiserImpl.xml  conceptFile_1_1Detail_1_1Concept_1_1HasTarget.xml  conceptFile_1_1Detail_1_1Concept_1_1HasUsedEndian.xml  conceptFile_1_1Detail_1_1Concept_1_1Iterable.xml  conceptFile_1_1Detail_1_1Concept_1_1SerialiserHasConstructor.xml  conceptFile_1_1Detail_1_1Concept_1_1SerialiserImpl.xml  conceptFile_1_1Detail_1_1Concept_1_1Simple.xml  conceptFile_1_1Detail_1_1Concept_1_1Span.xml  conceptFile_1_1Detail_1_1Concept_1_1String.xml  conceptFile_1_1Detail_1_1Concept_1_1Vector.xml  deserialiser_8h.xml  dir_30e585b4d0cb3ab23653c9522967a3ec.xml  dir_d44c64559bbebec7f509842c48db8b23.xml  dir_f5187446b277730cae7aa544d2f73b81.xml  error_8h.xml  index.xml  namespaceException.xml  namespaceFile.xml  namespaceFile_1_1Detail.xml  namespaceFile_1_1Detail_1_1Concept.xml  read_8h.xml  serialiser_8h.xml  stream_8h.xml  structFile_1_1Deserialiser.xml  structFile_1_1Detail_1_1Concept_1_1Array__Struct.xml  structFile_1_1Detail_1_1Concept_1_1Array__Struct_3_01std_1_1array_3_01T_00_01S_01_4_01_4.xml  structFile_1_1Detail_1_1Concept_1_1Span__Struct.xml  (+11 more)
doc/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
doc/html/.doctrees/: environment.pickle  index.doctree
doc/html/_sources/: index.rst.txt
doc/html/api/: classFile_1_1Detail_1_1ReadFunction.html  classFile_1_1Error.html  classFile_1_1ReadError.html  classFile_1_1Stream.html  classFile_1_1StreamError.html  class_structFile_1_1Deserialiser.html  class_structFile_1_1Serialiser.html  dir_include.html  dir_include_file.html  dir_include_file_stream.html  enum_namespaceFile_1aef8a42b3ab2cd380273518b701b15e8d.html  file_include_file_error.h.html  file_include_file_read.h.html  file_include_file_stream.h.html  file_include_file_stream_deserialiser.h.html  file_include_file_stream_serialiser.h.html  file_include_file_type.h.html  file_include_file_write.h.html  namespace_Exception.html  namespace_File.html  namespace_File__Detail.html  namespace_File__Detail__Concept.html  namespace_std.html  program_listing_file_include_file_error.h.html  program_listing_file_include_file_read.h.html  program_listing_file_include_file_stream.h.html  program_listing_file_include_file_stream_deserialiser.h.html  program_listing_file_include_file_stream_serialiser.h.html  program_listing_file_include_file_type.h.html  program_listing_file_include_file_write.h.html  root.html  structFile_1_1Detail_1_1Concept_1_1Array__Struct.html  structFile_1_1Detail_1_1Concept_1_1Array__Struct_3_01std_1_1array_3_01T_00_01S_01_4_01_4.html  structFile_1_1Detail_1_1Concept_1_1Span__Struct.html  structFile_1_1Detail_1_1Concept_1_1Span__Struct_3_01std_1_1span_3_01T_01_4_01_4.html  structFile_1_1Detail_1_1Concept_1_1String__Struct.html  structFile_1_1Detail_1_1Concept_1_1String__Struct_3_01std_1_1basic__string_3_01T_01_4_01_4.html  structFile_1_1Detail_1_1Concept_1_1Vector__Struct.html  structFile_1_1Detail_1_1Concept_1_1Vector__Struct_3_01std_1_1vector_3_01T_01_4_01_4.html  structFile_1_1ReadError_1_1OpenFailure.html  (+8 more)
doc/source/: conf.py
doc/source/api/: classFile_1_1Detail_1_1ReadFunction.rst  class_view_hierarchy.rst.include  dir_include_file.rst  file_include_file_stream.h.rst  root.rst  (+18 more)
headers/file/: error.h  input.h  output.h
headers/file-cpp/: file.h
headers/wqfile/: file.h
include/file/: error.h  read.h  read_string.h  stream.h  type.h  write.h  write_string.h
sources/: input.cc  output.cc
test/: CMakeLists.txt
test/source/: read_string_test.cc  read_test.cc  stream_test.cc  write_string_test.cc  write_test.cc
tests/: CMakeLists.txt
tests/sources/: file.cc  input_test.cc  output_test.cc
(+75 files in other folders)
